--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@
     language: node_js
     node_js:
     - stable
+    script:
+    - npm run coverage
     branches:
       only: development
     notifications:
