--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "test": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register test/routes/donations-test.js",
     "postbuild": "npm run server",
+    "coverage": "cross-env NODE_ENV=test PORT=4000 nyc mocha test/routes/donations-test.js",
     "prebuild": "npm-run-all test clean",
     "build": "babel ./ --out-dir lib/ --ignore ./node_modules,./.babelrc,./package.json,./package-lock.json,./test --copy-files",
     "server": "cross-env NODE_ENV=dev PORT=3001 node lib/bin/www",
@@ -34,6 +35,7 @@
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^6.4.1",
+    "babel-plugin-istanbul": "^4.1.5",
     "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
     "chai-http": "^2.0.1",
@@ -51,6 +53,7 @@
     "mocha": "^2.4.5",
     "nodemon": "^1.18.6",
     "npm-run-all": "^4.1.3",
+    "nyc": "^13.1.0",
     "rimraf": "^2.6.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.9",
