--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@
     - stable
     script:
     - npm run coverage
+    after_success:
+    - npm run publish-coverage
     branches:
       only: development
     notifications:
